--- a/feature/notes/src/main/res/values/strings.xml
+++ b/feature/notes/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="notes_title">Все заметки</string>
+    <string name="search_hint">Поиск по заметкам</string>
+    <string name="notes_is_empty">Заметок пока что нет...</string>
 </resources>
