теперь можно установить напоминание на заметку (работает со второго нажатия) и можно удалить уже имеющееся повторно нажав на иконку "Колокольчик" (работает со второго нажатия). Выводится информация о существующем напоминании.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">ShiftLab2024NotesApp</string>
+    <string name="permission_warning">вы не сможете получать напоминания, если не дадите разрешение</string>
 </resources>
